--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
     </div>
     <nav>
-      <div class="logo">Tasty <span>FOODS</span></div>
+      <div class="logo">DEV-NINETEEN <span>1199</span></div>
       <ul class="menu">
         <li><a href="#">Home</a></li>
         <li><a href="#menu">Menu</a></li>
         <li><a href="#orderfood">Order Food</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Pages</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#about">About US</a></li>
       </ul>
       <div class="order">
         <p>Call us for Order <span>+1-555-157-5651</span></p>
@@ -37,7 +37,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-text">
-      <h1>Welcome To <br> Our <span>Tasty Foods</span></h1>
+      <h1>Welcome To <br> Our <span>DEV-NINETEEN</span></h1>
       <p>Egestas amet facilisis cras suspendisse orci volutpat. Enim ut et amet vitae facilisi vel odio nisl. Pellentesque malesuada massa proin cursus elit amet iaculis.</p>
       <div class="buttons">
         <a href="#" class="btn yellow">Order Now</a>
@@ -54,12 +54,12 @@
    <p id="orderfood">
    <br><br><br>
   <section class="categories">
-    <div class="cat"><img src="https://i.ibb.co/TtzQ0Xy/burger.png" alt=""> <p>Burger</p></div>
-    <div class="cat"><img src="https://i.ibb.co/sH2xW4N/fries.png" alt=""> <p>French Fry</p></div>
-    <div class="cat"><img src="https://i.ibb.co/qkVFkzR/pasta.png" alt=""> <p>Pasta</p></div>
-    <div class="cat"><img src="https://i.ibb.co/zFFmSt9/sandwich.png" alt=""> <p>Sandwich</p></div>
-    <div class="cat"><img src="https://i.ibb.co/3TmGHLK/drinks.png" alt=""> <p>Cold Drinks</p></div>
-    <div class="cat"><img src="https://i.ibb.co/7gmc0Nf/combo.png" alt=""> <p>Combo</p></div>
+    <div class="cat"><img src="b1.jpg" alt=""> <p>Burger</p></div>
+    <div class="cat"><img src="p2.jpg" alt=""> <p>French Fry</p></div>
+    <div class="cat"><img src="p3.jpg" alt=""> <p>Pasta</p></div>
+    <div class="cat"><img src="p4.jpg" alt=""> <p>Sandwich</p></div>
+    <div class="cat"><img src="p5.jpg" alt=""> <p>Cold Drinks</p></div>
+    <div class="cat"><img src="p6.jpg" alt=""> <p>Combo</p></div>
   </section>
 
   <!-- Promo Section -->
@@ -84,7 +84,7 @@
   <!-- About Section -->
   <section class="about">
     <div class="about-img">
-      <img src="https://i.ibb.co/DYz8VdJ/burger-set.png" alt="">
+      <img src="https://static.vecteezy.com/system/resources/previews/049/688/515/non_2x/burger-and-french-fries-unhealthy-junk-food-png.png" alt="">
     </div>
     <div class="about-text">
       <h2>About <span>Tasty Foods</span></h2>
@@ -108,7 +108,7 @@
       <p>Egestas amet facilisis cras suspendisse orci volutpat.</p>
     </div>
     <div class="del-icon">
-      <img src="https://i.ibb.co/3Y8D6GQ/delivery.png" alt="">
+      <img src="https://png.pngtree.com/png-vector/20250513/ourmid/pngtree-food-delivery-rider-with-bycycle-png-image_16266415.png" alt="">
     </div>
     <div class="del-text">
       <h3>Order Online and Get Fast Delivery</h3>
@@ -126,67 +126,69 @@
 
     <!-- Category Tabs -->
     <div class="tabs">
+      <div class="tabs-btn">
       <button class="active">All Food</button>
-      <button>Burger</button>
-      <button>Pasta</button>
-      <button>Sandwich</button>
-      <button>Cold Drinks</button>
-      <button>Combo</button>
+      <button  class="active">Burger</button>
+      <button  class="active">Pasta</button>
+      <button  class="active">Sandwich</button>
+      <button  class="active">Cold Drinks</button>
+      <button  class="active">Combo</button>
+      </div>
     </div>
 
     <!-- Food Cards -->
     <div class="food-grid">
       <div class="food-card">
-        <img src="https://i.ibb.co/0cJbqWB/burger.png" alt="">
+        <img src="b1.jpg" alt="">
         <h3>Spicy Burger</h3>
         <p>Get a 20% Discount On<br>First Order</p>
         <span>$10.90</span>
         <button class="cart-btn">Add to Cart</button>
       </div>
       <div class="food-card">
-        <img src="https://i.ibb.co/sH2xW4N/fries.png" alt="">
+        <img src="p2.jpg" alt="">
         <h3>French Fry</h3>
         <p>Get a 20% Discount On<br>First Order</p>
         <span>$10.90</span>
-        <button class="cart-btn red">Add to Cart</button>
+        <button class="cart-btn ">Add to Cart</button>
       </div>
       <div class="food-card">
-        <img src="https://i.ibb.co/qkVFkzR/pasta.png" alt="">
+        <img src="p3.jpg" alt="">
         <h3>Pasta</h3>
         <p>Get a 20% Discount On<br>First Order</p>
         <span>$10.90</span>
         <button class="cart-btn">Add to Cart</button>
       </div>
       <div class="food-card">
-        <img src="https://i.ibb.co/zFFmSt9/sandwich.png" alt="">
+        <img src="p4.jpg" alt="">
         <h3>Sandwich</h3>
         <p>Get a 20% Discount On<br>First Order</p>
         <span>$10.90</span>
         <button class="cart-btn">Add to Cart</button>
       </div>
       <div class="food-card">
-        <img src="https://i.ibb.co/3TmGHLK/drinks.png" alt="">
+        <img src="p5.jpg" alt="">
         <h3>Cold Drinks</h3>
         <p>Get a 20% Discount On<br>First Order</p>
         <span>$10.90</span>
         <button class="cart-btn">Add to Cart</button>
       </div>
       <div class="food-card">
-        <img src="https://i.ibb.co/7gmc0Nf/combo.png" alt="">
+        <img src="p6.jpg" alt="">
         <h3>Combo 1</h3>
         <p>Get a 20% Discount On<br>First Order</p>
         <span>$10.90</span>
         <button class="cart-btn">Add to Cart</button>
       </div>
       <div class="food-card">
-        <img src="https://i.ibb.co/7gmc0Nf/combo.png" alt="">
+        <img src="p7.jpg" alt="">
         <h3>Combo 2</h3>
         <p>Get a 20% Discount On<br>First Order</p>
         <span>$10.90</span>
         <button class="cart-btn">Add to Cart</button>
       </div>
       <div class="food-card">
-        <img src="https://i.ibb.co/7gmc0Nf/combo.png" alt="">
+        <img src="p8.jpg" alt="">
         <h3>Combo 3</h3>
         <p>Get a 20% Discount On<br>First Order</p>
         <span>$10.90</span>
@@ -199,29 +201,31 @@
     </div>
   </section>
 
+   <p id="blog">
+   <br><br><br>
   <!-- Feedback Section -->
   <section class="feedback">
-    <h2>Our Customer <span>Feedbacks</span></h2>
-    <p>Magna sed sagittis non in mollis ultricies fermentum neque maecenas.</p>
+    <h2>ช่องทางการติดต่อ<span>Follow</span></h2>
+    <p>สามารถติดต่อด้านต่างๆได้ที่ด้านล่าง</p>
 
     <div class="feedback-grid">
       <div class="fb-card">
-        <p>"Tellus ultrices egestas justo id ac. Lorem id quam fermentum turpis..."</p>
+        <p>สวัสดีครับผมชื่อนายทีน อยากเป็นโปรแกรมเมอร์ครับ</p>
         <div class="fb-user">
-          <img src="https://i.ibb.co/qkVFkzR/pasta.png" alt="">
+          <img src="https://scontent.fkkc4-2.fna.fbcdn.net/v/t39.30808-6/518242404_2147950439037946_2963088784501352837_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFUKolA7mqy-0fW6CWyeUhypF3dFxicvOSkXd0XGJy85CBi6VgTOPGaD3Vfnh4GQQOaLrrDf47aI6jJkKgmYqDY&_nc_ohc=ExHSVXhiT7oQ7kNvwFsU3i5&_nc_oc=AdmUDoqNVHVXVpevGGtsn3qbS9CXthRG385e3893cspWFLbJUepsx39l9fShKBDvSXja4mQBdixoF2Ms6y1cOYg5&_nc_zt=23&_nc_ht=scontent.fkkc4-2.fna&_nc_gid=0L0g_Irobv0a1eHxGzHkVg&oh=00_AfVxcWyd4G94x1SGMM1yZy-xqTu4KKEdDKKXj8aTORqOFg&oe=68B3971B" alt="">
           <div>
-            <strong>Paul K. Seldon</strong><br>
-            <small>Organiser</small>
+            <strong>อภิวัฒน์ พุ่มแดง</strong><br>
+            <small>Facebook</small>
           </div>
         </div>
       </div>
       <div class="fb-card">
-        <p>"Tellus ultrices egestas justo id ac. Lorem id quam fermentum turpis..."</p>
+        <p>Hello, my name is Mr. Teen. I want to be a programmer.</p>
         <div class="fb-user">
-          <img src="https://i.ibb.co/qkVFkzR/pasta.png" alt="">
+          <img src="https://scontent.fkkc4-2.fna.fbcdn.net/v/t39.30808-6/495586774_2091974571302200_7589220908655059358_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeGxexjli03FUgFRIBJMt0_j5_W4aXQKf6Hn9bhpdAp_ofKvaH-b2HP4-f02wJ0kOb7CezyJT2ti_uW_V7xmiMsT&_nc_ohc=LKKluwHTTQAQ7kNvwHCD-hs&_nc_oc=Adm5MgvVRO8HFZUN1UT23RP72G1nrPB3_juM6mMMuVavRtoqUyub8jYJCW_vDo-8jYvHVLH5vDjU29GG0wKiQXkJ&_nc_zt=23&_nc_ht=scontent.fkkc4-2.fna&_nc_gid=uiyUHimwk3K5ywCH8undDQ&oh=00_AfV7SNdHUG0ednPEOQGXi1XTn2GzSBRfw5tfJWpVvE_58Q&oe=68B3C071" alt="">
           <div>
-            <strong>Paul K. Seldon</strong><br>
-            <small>Organiser</small>
+            <strong>Aphiwat Phumdaeng</strong><br>
+            <small>IG:tbzx4546</small>
           </div>
         </div>
       </div>
@@ -243,7 +247,7 @@
       </div>
 
       <div class="news-card">
-        <img src="https://picsum.photos/400/250?random=2" alt="">
+        <img src="/265178fc-47d3-4b20-a70f-eb6da798736e.jpg" alt="">
         <h3>Lorem condimentum id libero orci.</h3>
         <p>Aliquet elementum ultricies est lorem sit faucibus.</p>
         <a href="#">Read More</a>
@@ -258,15 +262,17 @@
     </div>
   </section>
 
+   <p id="about">
+   <br><br><br>
   <!-- Section: Gallery -->
   <section class="gallery-section">
     <h2 class="section-title">Foods <span>Gallery</span></h2>
     <div class="gallery-container">
-      <img src="https://picsum.photos/200/200?random=4" alt="">
-      <img src="https://picsum.photos/200/200?random=5" alt="">
-      <img src="https://picsum.photos/200/200?random=6" alt="">
-      <img src="https://picsum.photos/200/200?random=7" alt="">
-      <img src="https://picsum.photos/200/200?random=8" alt="">
+      <img src="b1.jpg" alt="">
+      <img src="p2.jpg" alt="">
+      <img src="p3.jpg" alt="">
+      <img src="p4.jpg" alt="">
+      <img src="p5.jpg" alt="">
     </div>
   </section>
 
